syntax = "proto3";

package inspire;

option go_package = "github.com/hojin-kr/fiber-grpc/inspire/proto;inspire/proto";

message Request {
    string uuid = 1;
    string prompt = 2;
    string context = 3;
    string message = 4;
    string status = 5;
    int64 created = 6;
    int64 updated = 7;
}

message Response {
    string uuid = 1;
    string prompt = 2;
    string context = 3;
    string message = 4;
    string status = 5;
    int64 created = 6;
    int64 updated = 7;
}

message Responses {
    repeated Response responses = 1;
}

service AddService {
    rpc Inspire(Request) returns (Response);
    rpc SendNotifications(Request) returns (Response);
    rpc GetInspires(Request) returns (Responses);
    rpc UpdateInspire(Request) returns (Response);
    rpc GetLastInspire(Request) returns (Response);
    rpc DeleteInspire(Request) returns (Response);
    rpc GenerateInspireAfterCreatedLast(Request) returns (Response);
    rpc SendNotification(Request) returns (Response);
}